css/container.css
.container {
    max-width: 700px;
    margin: 0 auto;
    padding: 0 20px;
    word-break: break-word;
}

.appHeader {
    font-size: 30px;
    margin: 30px 0;
    height: 
}

@media (max-width: 767px) {
    .flexInput {
        flex-wrap: wrap;
    }
}

@media (max-width: 767px) {
    .flex__itemInput {
        width: 100%;
        margin: 0px;
    }
}

@media (max-width: 767px) {
    .flex__itemButton {
        width: 100%;
        margin-top: 5px;
    }
}

